--- a/index.html
+++ b/index.html
@@ -16,24 +16,37 @@
             <li><a href="#">il metodo</a></li>
             <li><a href="#">la tecnologia</a></li>
             <li><a href="#">real life english</a></li>
-            <li><a href="#">soluzioni azinedali</a></li>
+            <li><a href="#">soluzioni aziendali</a></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li><a href="#">Diventa tutor</a></li>
+            <li><a href="#"class="login">login</a></li>
+            <li><a href="#"class="button-first">Struttura un piano</a></li>
           </ul>
         </nav>
-
-        <div class="header-nav-right">Navigazione di destra</div>
-      </div>
+        <div class="header-nav-right"></div>
+            </div>
       <div class="bannerone">
         <div class="testo-bannerone">
           <h1>Scegli l'inglese studiato per i profesionisti</h1>
           <a href="#"class="button button-green">struttura un piano</a>
           </div>
         </div>
-
-
     </header>
     <main class="page-main">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      <div class="titoli">
+      <h1>Le scuole di lingua tradizionale non sono efficaci</h1>
+      <h2>Solo un corso incentrato sulla fluency puo' portare ad una soluzione difinitiva e concreta</h2>
+      </div>
+      <div class="central">
+        <div class="left"></div>
+        <div class="center"></div>
+        <div class="right"></div>
+        </div>
 
+      </div>
+      </div>
     </main>
 <footer class="page-footer">
   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
