--- a/index.html
+++ b/index.html
@@ -36,11 +36,14 @@
     </header>
     <main class="page-main">
       <div class="titoli">
-      <h1>Le scuole di lingua tradizionale non sono efficaci</h1>
+      <h1 class="primo-titolo">Le scuole di lingua tradizionale non sono efficaci</h1>
       <h2>Solo un corso incentrato sulla fluency puo' portare ad una soluzione difinitiva e concreta</h2>
       </div>
       <div class="central">
         <div class="left"></div>
+
+
+
         <div class="center"></div>
         <div class="right"></div>
         </div>
@@ -49,7 +52,7 @@
       </div>
     </main>
 <footer class="page-footer">
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
 
 </footer>
   </body>
