--- a/index.html
+++ b/index.html
@@ -17,16 +17,15 @@
             <li><a href="#">la tecnologia</a></li>
             <li><a href="#">real life english</a></li>
             <li><a href="#">soluzioni aziendali</a></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li><a href="#">Diventa tutor</a></li>
-            <li><a href="#"class="login">login</a></li>
-            <li><a href="#"class="button-first">Struttura un piano</a></li>
+          </ul>
+        <div class="header-nav-right"></div>
+          <ul>
+              <li><a href="#">Diventa tutor</a></li>
+              <li><a href="#" class="login">login</a></li>
+              <li><a href="#" class="button-first">Struttura un piano</a></li>
           </ul>
         </nav>
-        <div class="header-nav-right"></div>
-            </div>
+      </div>
       <div class="bannerone">
         <div class="testo-bannerone">
           <h1>Scegli l'inglese studiato per i profesionisti</h1>
@@ -41,19 +40,30 @@
       </div>
       <div class="central">
         <div class="left"></div>
-
-
-
         <div class="center"></div>
         <div class="right"></div>
+      </div>
+      <div class="text">
+        <div class="left-text"><h3>Piano formativo configurato sul primo livello</h3><hr class="min">
         </div>
-
+        <div class="center-text"><h3>Affiancamento costante del tutor</h3><hr class="min">
+        </div>
+        <div class="right-text"><h3>Monitora i tuoi ptogressi costantemente</h3><hr class="min">
+        </div>
       </div>
-      </div>
-    </main>
-<footer class="page-footer">
+    <div class="text-bottom">
+      <div class="left-text-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+      <div class="center-text-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+      <div class="right-text-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</div>
+    </div>
+    <hr>
+    <div class="fianal-main">
+      <div class="col-sx"></div>
+      <div class="col-dx"> <h4><strong>Scopri il tuo livello iniziale e struttura un piano personalizzato</strong></h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <a href="#">Scopri il nostro test di placement</a> </div>
+    </div>
+  </main>
 
-
-</footer>
   </body>
 </html>
