footer da finire

--- a/index.html
+++ b/index.html
@@ -57,13 +57,24 @@
       <div class="right-text-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</div>
     </div>
     <hr>
-    <div class="fianal-main">
+      <div class="final-main">
       <div class="col-sx"></div>
       <div class="col-dx"> <h4><strong>Scopri il tuo livello iniziale e struttura un piano personalizzato</strong></h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         <a href="#">Scopri il nostro test di placement</a> </div>
-    </div>
-  </main>
+      </div>
+    </main>
+  <footer class="page-footer">
+    <div class="footer-sx"></div>
+      <div class="testo-finale"><strong>Struttura un piano</strong></div>
 
+
+    <div class="footer-dx"></div>
+
+
+
+
+
+    </footer>
   </body>
 </html>
