--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="page-header">
       <div class="header-nav">
-        <div class="header-nav-left"></div>
+        <div class="header-nav-left"> 
         <nav>
           <ul class="list-inline">
             <li><a href="#" class="logo-link"><img src="img/logo.png" alt=""></a></li>
@@ -18,12 +18,15 @@
             <li><a href="#">real life english</a></li>
             <li><a href="#">soluzioni aziendali</a></li>
           </ul>
-        <div class="header-nav-right"></div>
-          <ul>
+        </div>
+        <div class="header-nav-right">
+          <ul class="list-inline">
               <li><a href="#">Diventa tutor</a></li>
               <li><a href="#" class="login">login</a></li>
               <li><a href="#" class="button-first">Struttura un piano</a></li>
           </ul>
+        </div>
+      </div>
         </nav>
       </div>
       <div class="bannerone">
